<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/curved_bg_bottom_sheet"
    android:orientation="vertical"
    android:padding="@dimen/_16dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginTop="@dimen/_20dp"
        android:text="@string/enter_new_name"
        android:textColor="@color/colorBlue"
        android:textSize="@dimen/_18sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/new_list_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_20dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:hint="@string/enter_here_single"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:textColorHint="@color/colorHints"
        android:textSize="@dimen/_18sp"
        app:backgroundTint="@color/colorHints" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/rename_list_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="@dimen/_20dp"
        android:text="@string/rename_list" />

</LinearLayout>