<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.newTask.NewTaskActivity">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="23dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_regular"
            android:text="@string/cancel"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_18sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/done_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_23dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:fontFamily="@font/sf_pro_semi_bold"
            android:text="@string/done"
            android:textColor="@color/colorBlue"
            android:textSize="@dimen/_18sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ring"
            android:layout_width="@dimen/_24dp"
            android:layout_height="@dimen/_24dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_30dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_button"
            app:srcCompat="@drawable/ic_ring" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/task_edit_text"
            android:layout_width="@dimen/_0dp"
            android:layout_height="@dimen/_0dp"
            android:layout_marginStart="@dimen/_18dp"
            android:layout_marginTop="@dimen/_30dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:background="@android:color/transparent"
            android:cursorVisible="true"
            android:gravity="top"
            android:hint="@string/what_do_you_want_to_do"
            android:imeOptions="actionDone"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@id/lower_layer"
            app:layout_constraintLeft_toRightOf="@id/ring"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/cancel_button" />

        <LinearLayout
            android:id="@+id/lower_layer"
            android:layout_width="@dimen/_0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/task_edit_text">

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:background="@color/colorGray" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_60dp"
                android:layout_weight="1">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/calendar_button"
                    android:layout_width="@dimen/_44dp"
                    android:layout_height="@dimen/_0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="@dimen/_14dp"
                    android:paddingTop="@dimen/_18dp"
                    android:paddingEnd="@dimen/_6dp"
                    android:paddingBottom="@dimen/_18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/calendar_pressable" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/task_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorDarkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/calendar_button"
                    app:layout_constraintRight_toLeftOf="@id/time_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="24 Feb 2020" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/time_button"
                    android:layout_width="@dimen/_44dp"
                    android:layout_height="@dimen/_0dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="@dimen/_14dp"
                    android:paddingTop="@dimen/_18dp"
                    android:paddingEnd="@dimen/_6dp"
                    android:paddingBottom="@dimen/_18dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/task_date"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/alarm_pressable" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/task_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textColor="@color/colorDarkGray"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/time_button"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="24 Feb 2020" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/which_task_list"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="@dimen/_8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:text="@string/work"
                    android:textColor="@color/task_lists_pressable"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toLeftOf="@id/curved_dot"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/curved_dot"
                    android:layout_width="@dimen/_12dp"
                    android:layout_height="@dimen/_12dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:background="@drawable/curved_dot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/_1dp"
                android:background="@color/colorGray" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/calendar_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <CalendarView
                        android:id="@+id/calendar_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:dateTextAppearance="@style/CalendarViewTheme" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1dp"
                        android:background="@color/colorGray" />

                    <FrameLayout
                        android:id="@+id/calendar_view_controls"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/date_cancel_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingLeft="@dimen/_16dp"
                            android:paddingRight="@dimen/_16dp"
                            app:srcCompat="@drawable/ic_close" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/date_done_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end|center_vertical"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingLeft="@dimen/_16dp"
                            android:paddingRight="@dimen/_16dp"
                            android:src="@drawable/ic_done" />

                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/time_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:visibility="invisible">

                    <TimePicker
                        android:id="@+id/time_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:theme="@style/TimePickerTheme"
                        android:timePickerMode="spinner" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1dp"
                        android:background="@color/colorGray" />

                    <FrameLayout
                        android:id="@+id/time_view_controls"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/time_cancel_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingLeft="@dimen/_16dp"
                            android:paddingRight="@dimen/_16dp"
                            app:srcCompat="@drawable/ic_close" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/time_done_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end|center_vertical"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingLeft="@dimen/_16dp"
                            android:paddingRight="@dimen/_16dp"
                            android:src="@drawable/ic_done" />

                    </FrameLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/task_list_view_container"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_348dp"
                    android:layout_gravity="bottom"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/task_lists_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10dp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_1dp"
                        android:background="@color/colorGray" />

                    <FrameLayout
                        android:id="@+id/task_list_view_controls"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_48dp"
                        android:animateLayoutChanges="true"
                        android:orientation="horizontal">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/task_list_cancel_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="center_vertical"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingLeft="@dimen/_16dp"
                            android:paddingRight="@dimen/_16dp"
                            app:srcCompat="@drawable/ic_close" />

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/task_list_done_button"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_gravity="end|center_vertical"
                            android:background="?attr/selectableItemBackground"
                            android:clickable="true"
                            android:focusable="true"
                            android:paddingLeft="@dimen/_16dp"
                            android:paddingRight="@dimen/_16dp"
                            android:src="@drawable/ic_done" />

                    </FrameLayout>
                </LinearLayout>

            </FrameLayout>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>